# PySide6-OsmAnd-SDK

./: .gitattributes  .gitignore  BUILD.md  LICENSE  NOTICE.md  README.md  pyproject.toml
docs/: python-sdk-guide.md  python-sdk-guide.zh-CN.md
plugin/data/: geonames.sqlite3
plugin/docs/: database_spec.md
src/PySide6_OsmAnd_SDK.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/maps/: __init__.py  errors.py  main.py  map_sources.py  osmand_search.py  tile_backend.py
src/maps/map_widget/: __init__.py  _map_widget_base.py  map_gl_widget.py  map_renderer.py  map_widget.py  native_osmand_widget.py  tile_collector.py  tile_manager.py  viewport.py
src/maps/tiles/: World_basemap_2.obf
tools/osmand_render_helper_native/: CMakeLists.txt  build_helper.ps1  build_helper_official.ps1  build_linux.sh  build_macos.sh  build_native_widget_msvc.ps1
tools/osmand_render_helper_native/src/: osmand_core_runtime.cpp  osmand_core_runtime.h  osmand_native_map_widget.cpp  osmand_native_map_widget.h  osmand_native_widget_bridge.cpp  osmand_search_service.cpp  osmand_search_service.h
tools/osmand_render_helper_native/toolchains/: amd64-linux-gcc.cmake
