[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PySide6-OsmAnd-SDK"
version = "0.1.0"
description = "Standalone PySide6 SDK and native helper workspace for vendored OsmAnd core sources"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "OliverZhaohaibin"}]
dependencies = [
  "PySide6>=6.10.1",
]

[project.urls]
Homepage = "https://github.com/OliverZhaohaibin"
Repository = "https://github.com/OliverZhaohaibin"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
osmand-preview = "maps.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"maps" = ["tiles/*.obf"]
